# agentskit-os

./: .agentskitos-quality-baseline.json  .agentskitos-ui-baseline.json  .gitignore  .size-limit.json  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.agentskitos-api/: os-audit.json  os-cli.json  os-coding-agents.json  os-core.json  os-dev-orchestrator.json  os-flow.json  os-headless.json  os-import.json  os-marketplace-sdk.json  os-mcp-bridge.json  os-observability-otel.json  os-observability.json  os-plugins.json  os-runtime-agentskit.json  os-runtime.json  os-sandbox.json  os-storage.json  os-templates.json  os-ui.json
.changeset/: 343-operator-roles.md  372-activation-metrics.md  README.md  adr-0018.md  adr-0019-visual-flow-editor.md  agency-template-197.md  agent-clone-variation-99.md  agent-harness-92.md  agentic-quality-gates.md  anomaly-presets-108.md  anomaly-rules-grammar-215.md  apps-desktop-scaffold.md  automation-rules-238.md  benchmark-config-366.md  builtin-triggers-7x.md  c6-offline-marketplace-cache.md  chaos-harness-244.md  ci-conformance-release-gate-440.md  circuit-breaker-239.md  clean-poems-film.md  cli-commander-flow-new.md  cli-exitoverride-recursive.md  cli-explain-run-224.md  cloud-plan-123.md  cloud-sync-122.md  coding-failure-incidents-376.md  compliance-export-111.md  conformance-ci-vault-379.md  connection-suggester-88.md  cost-guard-107.md  cost-heat-map-110-196.md  d5-devprod-tests.md  d7-split-view-persist.md  decision-log-214.md  delegation-inbox-365.md  (+210 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  sidecar.rs  tray.rs  windows.rs
(+410 files in other folders)
