[package]
name = "agentskitos-desktop"
version = "0.1.0"
description = "AgentsKitOS Desktop — Tauri 2 shell"
authors = ["AgentsKit Contributors"]
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "agentskitos_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"

[features]
# This feature is used for production builds or when a dev server is not specified.
# See https://v2.tauri.app/develop/#build-mode for details.
custom-protocol = ["tauri/custom-protocol"]
